Merged PR 57020: #72402 Add window times traffic signs to accessibility map GraphHopper network
#72402 Add window times traffic signs to accessibility map GraphHopper network

Related work items: #75760